# jaiminho-notificacoes

./: .env.example  .gitignore  DEPLOY_GUIA_COMPLETO.md  DEPLOY_SEM_INSTALAR.md  DIGEST_AGENT_SUMMARY.md  FEEDBACK_HANDLER_IMPLEMENTATION.md  LANGGRAPH_IMPLEMENTATION.md  LEARNING_AGENT_ARCHITECTURE.md  LEARNING_AGENT_IMPLEMENTATION.md  LEARNING_AGENT_QUICKSTART.md  LEARNING_AGENT_SUMMARY.md  Makefile  README.md  README_WEBHOOK_REFACTORING.md  RULE_ENGINE_W_API_SEMANTICS_UPDATE.md  SENDPULSE_ADAPTER_INDEX.md  SENDPULSE_ADAPTER_SUMMARY.md  SENDPULSE_ARCHITECTURE_FINAL.md  SENDPULSE_COMPLIANCE_CORRECTION.md  SENDPULSE_COMPLIANCE_REPORT.md  SENDPULSE_FINAL_REVIEW_CORRECTED.md  SENDPULSE_IMPLEMENTATION_COMPLETE.md  SENDPULSE_OUTBOUND_VALIDATION.md  SENDPULSE_QUICKSTART.md  SENDPULSE_REFACTORING_SUMMARY.md  SENDPULSE_REVIEW_CHECKLIST.md  SENDPULSE_REVIEW_EXECUTIVE_SUMMARY.md  SENDPULSE_REVIEW_INDEX.md  SENDPULSE_WHAT_HAPPENED.md  URGENCY_AGENT_README.md  VALIDATION_CHECKLIST.md  WAPI_INSTANCES_IMPLEMENTATION.md  WAPI_INSTANCES_MIGRATION.md  WEBHOOK_HANDLER_REFACTORING.md  WEBHOOK_REFACTORING_SUMMARY.md  pyproject.toml  setup.py  version.txt
config/: development.yaml  staging.yaml
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
docs/: API_INTEGRATION.md  ARCHITECTURE.md  CLASSIFICATION_AGENT.md  CLASSIFICATION_AGENT_SUMMARY.md  DEPLOYMENT.md  DIGEST_AGENT.md  FEEDBACK_HANDLER.md  LANGGRAPH_ORCHESTRATOR.md  LANGGRAPH_WORKFLOWS.md  LEARNING_AGENT.md  LOCAL_DEVELOPMENT.md  MULTILINGUAL_KEYWORDS.md  RULE_ENGINE.md  SENDPULSE_ADAPTER.md  SENDPULSE_INTEGRATION.md  (+3 more)
(+90 files in other folders)
